style(admin): fix alignement in editor with type de champ used by routing

--- a/app/assets/stylesheets/procedure_champs_editor.scss
+++ b/app/assets/stylesheets/procedure_champs_editor.scss
@@ -33,10 +33,11 @@
       }
     }
 
-    .delete {
+    .right {
       flex-grow: 1;
       display: flex;
       justify-content: flex-end;
+      align-items: center;
     }
 
     &.first .move-up {
